Bug fixed - not centered

--- a/src/components/BottomBar/BottomBar.css
+++ b/src/components/BottomBar/BottomBar.css
@@ -1,5 +1,4 @@
 .BottomBar {
-  width: 75%;
   display: flex;
   align-items: center;
   flex-direction: column;
